# wgx

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  rust-clippy.yml
src/: cli.rs  config.rs  main.rs  wg.ini  wgc.rs
