[package]
name = "wgx"
version = "0.1.5"
edition = "2021"
authors = ["yinheli <me@yinheli.com>"]
keywords = ["wireguard", "toolkit"]
description = "wireguard tool to manage / generate configuration."
repository = "https://github.com/yinheli/wgx"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ipnet = "2"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_yaml = "0.9"
tera = "1.17.0"
base64 = "0.21"
x25519-dalek = "1"
rand_core = "0.6"
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
qr2term = "0.3"

[profile.release]
opt-level = 'z'
lto = true
strip = true
codegen-units = 1
panic = 'abort'
